Wed Sep 30 05:03:35 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/dds/dcps_java_optional.mpb:

          Attempted for for MPC dependency issues for Java bindings.

Tue Sep 29 16:39:52 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/TestFramework/TestFramework_T.h:
        * tests/DCPS/TestFramework/TestFramework_T.cpp:

          Fixes for Windows and Linux hosts.

Mon Sep 28 21:13:53 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/DestinationOrder/TestCase.h:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:
        * tests/DCPS/TestFramework/TestFramework_T.h:
        * tests/DCPS/TestFramework/TestFramework_T.cpp:

          TestFramework updates; fixed template issues on non-Solaris
          platforms.

Thu Sep 24 21:33:28 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/DestinationOrder/DestinationOrder.mpc:
        * tests/DCPS/DestinationOrder/TestCase.h:
        * tests/DCPS/DestinationOrder/TestCase.cpp:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.idl:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:

          TestFramework updates; converted DestinationOrder test.

Wed Sep 23 23:09:24 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcps_test.mpb:
        * MPC/config/dcps_test_tcp.mpb:
        * tests/DCPS/TestFramework:
        * tests/DCPS/TestFramework/Test.idl:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:
        * tests/DCPS/TestFramework/TestFramework_Export.h:

          Initial commit of DCPS TestFramework harness.

Wed Sep 23 21:36:29 UTC 2009  Steven Stallion  <stallions@ociweb.com>
